--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,14 @@ buildscript {
     repositories {
         google()
         jcenter()
-//        maven {url='https://dl.bintray.com/houtengzhi/maven'}
-        
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.2'
         classpath 'com.yechy.gradleplugin:aspectj-plugin:1.0.1'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
+
+        classpath 'com.novoda:bintray-release:0.9.1'
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -20,10 +22,20 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        maven {url='https://dl.bintray.com/houtengzhi/maven'}
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+allprojects {
+    tasks.withType(Javadoc) {
+        options {
+            encoding "UTF-8"
+            charSet 'UTF-8'
+            links "http://docs.oracle.com/javase/7/docs/api"
+        }
+    }
 }
