--- a/handyfont/build.gradle
+++ b/handyfont/build.gradle
@@ -32,3 +32,7 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
+
+group='com.yechy.handyfont'
+version='1.0.1'
+apply from: '../uploadToJcenterByJfrog.gradle'
